Addes style to fix the navbar overlapping the sidebar

--- a/app/stylesheets/base/_#left-side.sass
+++ b/app/stylesheets/base/_#left-side.sass
@@ -4,11 +4,12 @@
   background-color: $section_tabs_bg_color
   display: none
   font-size: 12px
-  
+  padding-top: 68px
+
   .left-side-inner
     padding: 10px
     margin-left: 5px
-    
+
   #section-tabs-header
     padding: 12px
     margin: 0
@@ -21,13 +22,13 @@
     margin: -16px 12px 5px
     display: block
     text-decoration: none
-    
+
 #section-tabs
   margin: 0
   padding: 0
   list-style: none
   border-top: 1px solid $section_tabs_border_top_color
-  
+
   li
     a
       color: $section_tabs_color
@@ -36,7 +37,7 @@
       padding: 5px 0 5px 25px
       border-bottom: 1px solid $section_tabs_border_bottom_color
       +text-shadow(1px, 2px, 3px, #CBCBCB)
-              
+
       &:hover, &:focus
         background-color: $section_tabs_hover_background_color
         // color: #fff
